Closed
Bug 1379232
Opened 8 years ago
Closed 5 years ago
ChunkPools are not always empty on destruction
Categories
(Core :: JavaScript: GC, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla77
People
(Reporter: jonco, Assigned: jonco)
References
Details
Attachments
(1 file)
Adding an assertion that ChunkPools are empty in the destructor causes failures on Windows 2012 XPCShell tests:
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&fromchange=d74d18a0b7816d4404e5baf270e4d71ac8522ef2&noautoclassify&filter-searchStr=noopt%20win&selectedJob=112557400
Updated•8 years ago
|
Component: JavaScript: Internationalization API → JavaScript: GC
Updated•8 years ago
|
status-firefox57:
--- → affected
Priority: -- → P3
| Assignee | ||
Comment 1•5 years ago
|
||
This appears to pass on try now, probably due to the memory leak reporting changes around bug 1407593.
Updated•5 years ago
|
Assignee: nobody → jcoppeard
Status: NEW → ASSIGNED
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6f9b5bafc63f
Assert that ChunkPools are empty in their destructor r=jandem
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Updated•5 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•