Bug 1379232 - Assert that ChunkPools are empty in their destructor r=jandem

This appears to pass on try now, probably due to the memory leak reporting changes around bug 1407593.

Differential Revision: https://phabricator.services.mozilla.com/D71508